CAUSEWAY-3808: show row select actions only if row-selection is enabled
- calc row index based on the filtered and sorted result